--- a/sass.scss
+++ b/sass.scss
@@ -340,11 +340,11 @@ body {
                 margin: 0px 0px 10px 0px;
                 width: 46%;
                 /* border: solid blue 2px; */
-                line-height: 2;
+                line-height: 1.7;
                 /* position: relative; */
                 /* right: 25px; */
                 text-align: right;
-                font-size: 20pt;
+                font-size: 20px;
                 vertical-align: top;    
 
                 @media (max-width: $breakpoint---m) {
@@ -387,17 +387,21 @@ body {
                         margin: 0 auto;
                     }
 
-                    .snookers---required {
+                    &.snookers---required {
 
-                        font-size: 12px;
+                        /* font-size: 12px;*/
+                        /* color: #ff2f00; */
+                        color: $display---ball--red;
+                        color: $col---secondary;
 
                         span {
 
-                            color: $col---player--score;
+                            color: #ff5e00;
                         }
-
+                        
                     }                    
 
+                    .highest---break, 
                     .last---break {
 
                         color: $col---player--score;
