--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /******************************
 
 Snooker Scorer App: 
-Last Update: 27/03/2025 - 13:53
+Last Update: 16/04/2025 - 13:11
 ******************************/
 * {
   padding: 0;
@@ -258,11 +258,11 @@ body main.interface-container .player---section .breaks---and--snookers {
   margin: 0px 0px 10px 0px;
   width: 46%;
   /* border: solid blue 2px; */
-  line-height: 2;
+  line-height: 1.7;
   /* position: relative; */
   /* right: 25px; */
   text-align: right;
-  font-size: 20pt;
+  font-size: 20px;
   vertical-align: top;
 }
 @media (max-width: 620px) {
@@ -304,12 +304,16 @@ body main.interface-container .player---section .breaks---and--snookers div {
     margin: 0 auto;
   }
 }
-body main.interface-container .player---section .breaks---and--snookers div .snookers---required {
-  font-size: 12px;
+body main.interface-container .player---section .breaks---and--snookers div.snookers---required {
+  /* font-size: 12px;*/
+  /* color: #ff2f00; */
+  color: #cd0000;
+  color: white;
 }
-body main.interface-container .player---section .breaks---and--snookers div .snookers---required span {
-  color: #ffe731;
+body main.interface-container .player---section .breaks---and--snookers div.snookers---required span {
+  color: #ff5e00;
 }
+body main.interface-container .player---section .breaks---and--snookers div .highest---break,
 body main.interface-container .player---section .breaks---and--snookers div .last---break {
   color: #ffe731;
 }
