--- a/sass.scss
+++ b/sass.scss
@@ -19,11 +19,14 @@ body {
         height: 42px;
         height: auto;
         width: 100%;
-        
+        padding: 8px 0;
+
         p, h1 {
             
+            display: inline-block;
             position: relative;
-            top: 0px;            
+            top: 0px;        
+            vertical-align: middle;    
         }
         
         h1 {
@@ -34,6 +37,17 @@ body {
 
                 font-size: 7vw;
             }
+        }
+
+        img#snooker---app--logo {
+
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            vertical-align: top;
+            margin: 0 18px;
+            border: solid $col---tertiary 2px;
+
         }
     }
     
