--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /******************************
 
 Snooker Scorer App: 
-Last Update: 16/04/2025 - 13:11
+Last Update: 28/04/2025 - 13:38
 ******************************/
 * {
   padding: 0;
@@ -22,10 +22,13 @@ body nav {
   height: 42px;
   height: auto;
   width: 100%;
+  padding: 8px 0;
 }
 body nav p, body nav h1 {
+  display: inline-block;
   position: relative;
   top: 0px;
+  vertical-align: middle;
 }
 body nav h1 {
   font-size: 39px;
@@ -34,6 +37,14 @@ body nav h1 {
   body nav h1 {
     font-size: 7vw;
   }
+}
+body nav img#snooker---app--logo {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  vertical-align: top;
+  margin: 0 18px;
+  border: solid #e5ff61 2px;
 }
 body main.interface-container {
   display: block;
