add spaces for points ahead and remaining for each player

--- a/sass.scss
+++ b/sass.scss
@@ -529,6 +529,12 @@ body {
 
             }
 
+            .player---points--difference {
+
+                margin: 7px;
+                visibility: hidden;
+            }
+
         }
 
     }
