remove ball tally amounts by default

--- a/sass.scss
+++ b/sass.scss
@@ -488,6 +488,26 @@ body {
                     top: 7px;
                     cursor: pointer;
                 }
+
+                #tally---potted--black-p1,
+                #tally---potted--pink-p1,
+                #tally---potted--blue-p1,
+                #tally---potted--brown-p1,
+                #tally---potted--green-p1,
+                #tally---potted--yellow-p1,
+                #tally---potted--red-p1,
+                
+                #tally---potted--black-p2,
+                #tally---potted--pink-p2,
+                #tally---potted--blue-p2,
+                #tally---potted--brown-p2,
+                #tally---potted--green-p2,
+                #tally---potted--yellow-p2,
+                #tally---potted--red-p2 {
+
+                    opacity: 0;
+                }
+
             }
 
             .player---pot--score {
@@ -526,6 +546,26 @@ body {
                     }
 
                 }
+
+                #tally---potted--black-p1,
+                #tally---potted--pink-p1,
+                #tally---potted--blue-p1,
+                #tally---potted--brown-p1,
+                #tally---potted--green-p1,
+                #tally---potted--yellow-p1,
+                #tally---potted--red-p1,
+                
+                #tally---potted--black-p2,
+                #tally---potted--pink-p2,
+                #tally---potted--blue-p2,
+                #tally---potted--brown-p2,
+                #tally---potted--green-p2,
+                #tally---potted--yellow-p2,
+                #tally---potted--red-p2 {
+
+                    opacity: 0;
+                }
+                
 
             }
 
