add new font size variable

--- a/assets/sass/config.scss
+++ b/assets/sass/config.scss
@@ -37,6 +37,9 @@ $display---ball--red: #cd0000;
 
 
 // font sizes
+
+$font---size--title: 7vw;
+
 $font---size--lg: 30px;
 $font---size--md: 16px;
 $font---size--sm: 12px;
