refine styles - player at table icon

--- a/sass.scss
+++ b/sass.scss
@@ -183,12 +183,12 @@ body {
                 .player---at--table {
                     
                     background: $display---ball--red;
-                    margin: 5px 15px;
-                    width: 20px;
-                    height: 20px;
+                    margin: 6px 23px;
+                    width: 16px;
+                    height: 16px;
                     border-radius: 50%;
                     /* vertical-align: top; */
-                    border: solid white 1px;
+                    border: solid #972828 2px;
                     visibility: visible;
                 }
 
