final interface design check

--- a/assets/sass/config.scss
+++ b/assets/sass/config.scss
@@ -11,6 +11,10 @@ $col---tertiary: #e5ff61;
 
 $col---player--score: #ffe731;
 $col---player--totalscore: #ffe818;
+$col---player--snookersrequired: #ff5e00;
+
+$col---link--primary: white;
+$col---link--primary-hover: #fff041;
 
 
 // border colours
