apply link for red ball icon -player 1

--- a/sass.scss
+++ b/sass.scss
@@ -375,6 +375,17 @@ body {
 
                 }
 
+                a#apply_tally---red--p1 {
+
+                    color: yellow;
+                    font-size: 12px;
+                    margin: 0 10px;
+                    position: relative;
+                    bottom: 7px;
+                    visibility: hidden;
+                    visibility: visible;
+
+                }
                 
             }
 
