--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /******************************
 
 Snooker Scorer App: 
-Last Update: 08/05/2025 - 12:09
+Last Update: 14/05/2025 - 15:37
 ******************************/
 * {
   padding: 0;
@@ -276,6 +276,15 @@ body main.interface-container .player---section .player---potting .player---pot-
 body main.interface-container .player---section .player---potting .player---pot--black p {
   color: black;
   color: white;
+}
+body main.interface-container .player---section .player---potting a#apply_tally---red--p1 {
+  color: yellow;
+  font-size: 12px;
+  margin: 0 10px;
+  position: relative;
+  bottom: 7px;
+  visibility: hidden;
+  visibility: visible;
 }
 body main.interface-container .player---section .breaks---and--snookers {
   display: inline-block;
