style apply red link for red ball p2

--- a/sass.scss
+++ b/sass.scss
@@ -375,7 +375,8 @@ body {
 
                 }
 
-                a#apply_tally---red--p1 {
+                a#apply_tally---red--p1,
+                a#apply_tally---red--p2 {
 
                     color: yellow;
                     font-size: 12px;
@@ -383,7 +384,7 @@ body {
                     position: relative;
                     bottom: 7px;
                     visibility: hidden;
-                    visibility: visible;
+                    /* visibility: visible; */
 
                 }
                 
